--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,17 +20,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-
-    //Fire base Core
-    implementation 'com.google.firebase:firebase-core:12.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-auth:12.0.1'
-
-    //Firebase Firestore
-    implementation 'com.google.firebase:firebase-firestore:12.0.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //Firebase
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
+    implementation 'android.arch.core:runtime:1.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
